--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v3
+        with:
+         go-version: "^1.18"
       - uses: actions/cache@v2
         with:
           path: |
@@ -37,6 +39,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v3
+        with:
+         go-version: "^1.18"
       - uses: actions/cache@v2
         with:
           path: |
@@ -54,6 +58,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v3
+        with:
+         go-version: "^1.18"
       - uses: actions/cache@v2
         with:
           path: |
