--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: run golangci-lint
         uses: golangci/golangci-lint-action@v3
+        with:
+          version: v3.2
 
   setup:
     name: setup
