--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -14,6 +14,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.47
+          skip-cache: true
 
   setup:
     name: setup
