--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: go-semantic-release/action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          allow-initial-development-versions: true
